# Deepthought-Schema

./: .gitignore  LICENSE  README.md  __init__.py  const.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
_tests/: spec_fixture.py  test_catalog.py  test_checks_generator.py  test_cli.py  test_docs_generator.py  test_tests_generator.py  test_validate.py
assets/: common.graphql  config.yaml  constant.graphql
common/: Singleton.py
docs/: _config.yml  index.md  test_manifest.md
docs/reference/: collection.md  constant.md  domain.md  error.md  event.md  expression.md  field.md  model.md  permission.md  scenario.md  state_machine.md  unit.md  usecase.md
examples/collection/: a_series_paper_widths.yaml  standard_screen_resolutions.yaml
examples/constant/: elementary_charge.yaml
examples/domain/: inventory.yaml
examples/error/: pringles_can_not_found.yaml
examples/event/: pringles_can_stocked.yaml
examples/expression/: density_formula.yaml
examples/field/: person_height_metric.yaml  pringles_can_id.yaml  pringles_can_radius.yaml
examples/model/: pringles_can.yaml  pringles_can_dimensions.yaml  pringles_can_lookup.yaml
examples/permission/: inventory_access.yaml
examples/scenario/: get_pringles_can_happy_path.yaml  get_pringles_can_not_found.yaml
examples/state_machine/: pringles_can_lifecycle.yaml
examples/unit/: ampere.yaml  velocity.yaml
examples/usecase/: calculate_can_density.yaml  get_pringles_can.yaml  hash_pringles_can.yaml  list_pringles_cans.yaml
meta-schema/: attribute.meta.yaml  collection.meta.yaml  compound-units.meta.yaml  constant.meta.yaml  domain.meta.yaml  error.meta.yaml  event.meta.yaml  expression.meta.yaml  field-assertion.meta.yaml  field.meta.yaml  meta-datatype.meta.yaml  model.meta.yaml  permission.meta.yaml  scenario.meta.yaml  state_machine.meta.yaml  unit.meta.yaml  usecase.meta.yaml
schema/: field.schema.yaml  model.schema.yaml  unit.schema.yaml
schema/compound_units/: bitpersecond.compound.schema.yaml  (+8 more)
src/: index.ts  main.ts
(+73 files in other folders)
